--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ pool:
 
 steps:
 - script: echo ${{parameters.file}}
-  displayName: 'Run a one-line script'
+  displayName: 'show the parameter selected'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
